[gd_scene load_steps=9 format=3 uid="uid://mhxh2iawbxf5"]

[ext_resource type="Script" path="res://Scenes/Transistion System/sales_to_prod_button.gd" id="1_c4egc"]
[ext_resource type="Texture2D" uid="uid://dxwr3c34lbhat" path="res://Art/transition_button_test.png" id="2_d8vtu"]
[ext_resource type="Texture2D" uid="uid://ckid0p6k0wk7t" path="res://Art/transition_button_test_alt.png" id="3_xvj7m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mabon"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h0k7m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x15pk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iw28q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jkjxu"]

[node name="sales_to_prod_button" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c4egc")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_d8vtu")

[node name="activated_texture" type="TextureRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.392157)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_xvj7m")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_right = 50.0
offset_bottom = 500.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_mabon")
theme_override_styles/hover = SubResource("StyleBoxEmpty_h0k7m")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_x15pk")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_iw28q")
theme_override_styles/focus = SubResource("StyleBoxEmpty_jkjxu")

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
